# Hector_Simulation

Hector_ROS_Simulation/bear_actuator_dfm_ros/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/bear_actuator_dfm_ros/config/: hardware.yaml  hardware_test.yaml  lambda_leg_bear_effort_controllers.yaml  lambda_leg_bear_effort_test_controllers.yaml  lambda_leg_effort_controllers.yaml
Hector_ROS_Simulation/bear_actuator_dfm_ros/include/bear_actuator_dfm_ros/: hardware_interface.h
Hector_ROS_Simulation/bear_actuator_dfm_ros/include/cbear/: bear_sdk.h  packet_manager.h
Hector_ROS_Simulation/bear_actuator_dfm_ros/launch/: bear_actuator_ros.launch  bear_actuator_ros_test.launch
Hector_ROS_Simulation/bear_actuator_dfm_ros/rviz/: dfm_test.rviz  rviz.rviz
Hector_ROS_Simulation/bear_actuator_dfm_ros/script/: lambda_leg_dfm_test.py  lambda_leg_sample.py  lambda_leg_sample2.py
Hector_ROS_Simulation/bear_actuator_dfm_ros/src/: bear_control_node.cpp  hardware_interface.cpp
Hector_ROS_Simulation/bear_actuator_dfm_ros/src/cbear/: bear_sdk.cpp  packet_manager.cpp  port_manager.cpp
Hector_ROS_Simulation/bear_actuator_dfm_ros/src/cbear/utils/: loop_time_stats.cpp
Hector_ROS_Simulation/bear_actuator_dfm_ros/src/gim/: gim.cpp  gim_calibration.cpp
Hector_ROS_Simulation/bear_actuator_dfm_ros/urdf/: gorosuke_arm.urdf
Hector_ROS_Simulation/bear_actuator_ros/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/bear_actuator_ros/config/: hardware.yaml  lambda_leg_effort_controllers.yaml  lambda_leg_position_controllers.yaml  lambda_leg_trajectory_controllers.yaml
Hector_ROS_Simulation/bear_actuator_ros/include/bear_actuator_ros/: hardware_interface.h
Hector_ROS_Simulation/bear_actuator_ros/include/cbear/: bear_macro.h  bear_sdk.h  packet_manager.h
Hector_ROS_Simulation/bear_actuator_ros/include/gim/: gim.hpp
Hector_ROS_Simulation/bear_actuator_ros/launch/: bear_actuator_ros.launch  robot_description_example.launch
Hector_ROS_Simulation/bear_actuator_ros/script/: lambda_leg_sample.py  lambda_leg_sample2.py
Hector_ROS_Simulation/bear_actuator_ros/src/: bear_control_node.cpp  hardware_interface.cpp
Hector_ROS_Simulation/bear_actuator_ros/src/app/sample_main/: sample_main.cpp
Hector_ROS_Simulation/bear_actuator_ros/src/cbear/: bear_sdk.cpp  packet_manager.cpp
Hector_ROS_Simulation/bear_actuator_ros/src/gim/: gim.cpp  gim_calibration.cpp
Hector_ROS_Simulation/bear_effort_controllers/: CMakeLists.txt  bear_effort_controllers_plugins.xml  package.xml
Hector_ROS_Simulation/bear_effort_controllers/include/bear_effort_controllers/: joint_effort_controller.h  joint_group_effort_controller.h  joint_group_position_controller.h  joint_position_controller.h  joint_velocity_controller.h
Hector_ROS_Simulation/bear_effort_controllers/include/bear_hardware_interface/: joint_command_interface.h
Hector_ROS_Simulation/bear_effort_controllers/src/: joint_effort_controller.cpp  joint_group_effort_controller.cpp  joint_group_position_controller.cpp  joint_position_controller.cpp  joint_velocity_controller.cpp
Hector_ROS_Simulation/hector_control/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/hector_control/ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_interface.h
Hector_ROS_Simulation/hector_control/config/: robot.yaml
Hector_ROS_Simulation/hector_control/include/common/: Biped.h  CheaterEstimator.h  FootSwingTrajectory.h  LegController.h  StateEstimatorContainer.h  SwingLegController.h  robot_select.h
Hector_ROS_Simulation/hector_control/include/interface/: BearIO.h  CheatIO.h  IOInterface.h
Hector_ROS_Simulation/hector_control/src/: main.cpp
Hector_ROS_Simulation/hector_control/src/FSM/: FSM.cpp  FSMState.cpp  FSMState_TO.cpp  FSMState_Walking.cpp
Hector_ROS_Simulation/hector_control/src/common/: LegController.cpp  PositionVelocityEstimator.cpp  SwingLegController.cpp
Hector_ROS_Simulation/hector_control/src/interface/: BearIO.cpp  CheatIO.cpp
Hector_ROS_Simulation/hector_description/launch/: bear_dfm_test.launch  check_joint.rviz  wwlambda_r2_rviz.launch  wwlambda_r2_rviz_bear.launch  wwlambda_r2_rviz_dfm.launch  wwlambda_rviz.launch
Hector_ROS_Simulation/hector_description/meshes/wwlambda/: ww_lambda_left_foot.stl  ww_lambda_left_hip_joint.stl  ww_lambda_left_shin.stl  ww_lambda_left_thigh.stl  ww_lambda_right_foot.stl  ww_lambda_right_hip.stl  ww_lambda_right_hip_joint.stl  ww_lambda_right_hip_joint_r2.stl  ww_lambda_right_shin.stl  (+4 more)
Hector_ROS_Simulation/hector_description/xacro/: bear_dfm_test.urdf  bumper.xacro  gazebo.xacro  leg.xacro  test.sdf  test.urdf  wwlambda.xacro  wwlambda_const.xacro  wwlambda_gazebo.xacro  wwlambda_r2.xacro
Hector_ROS_Simulation/westwood_ros/westwood_controller/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/westwood_ros/westwood_gazebo/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/westwood_ros/westwood_gazebo/launch/: biped.launch  wwlambda.launch  wwlambda_r2.launch
Hector_ROS_Simulation/westwood_ros/westwood_gazebo/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
Hector_ROS_Simulation/westwood_ros/westwood_gazebo/worlds/: normal.world
Hector_ROS_Simulation/westwood_ros/westwood_legged_control/: CMakeLists.txt  package.xml  westwood_controller_plugins.xml
Hector_ROS_Simulation/westwood_ros/westwood_legged_control/include/: joint_controller.h  westwood_joint_control_tool.h
Hector_ROS_Simulation/westwood_ros/westwood_legged_control/include/cbear/: bear_sdk.h  packet_manager.h  port_manager.h
Hector_ROS_Simulation/westwood_ros/westwood_legged_control/include/westwood_legged_control/: joint_controller.h
Hector_ROS_Simulation/westwood_ros/westwood_legged_control/src/: joint_controller.cpp
Hector_ROS_Simulation/westwood_ros/westwood_legged_control/src/app/sample_main/: sample_main.cpp
Hector_ROS_Simulation/westwood_ros/westwood_legged_control/src/cbear/: bear_sdk.cpp  packet_manager.cpp  port_manager.cpp
Hector_ROS_Simulation/westwood_ros/westwood_legged_msgs/: CMakeLists.txt  package.xml
(+13 files in other folders)
