<?xml version="1.0"?>
<package format="2">
  <name>bear_actuator_ros</name>
  <version>2.0.1</version>
  <description>ROS package for west wood bear actuator</description>
  <license>Apache 2.0</license>

  <author email="shimaken@ba.mbn.or.jp">Shimaken</author>
  <maintainer email="shimaken@ba.mbn.or.jp">Shimaken</maintainer>
  <!-- <url type="website">http://wiki.ros.org/open_manipulator_hw</url> -->
  <!-- <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
</package>
